mengubah judul navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #8fbc8f">
       <div class="container">
-        <a class="navbar-brand" href="#">Alvaro</a>
+        <a class="navbar-brand" href="#">Farhan Ahmad Alvaro</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -69,10 +69,13 @@
         </div>
         <div class="row justify-content-center fs-5">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure deserunt officiis accusantium natus autem id culpa ratione sed accusamus cum?</p>
+            <p>
+              Perkenalkan saya Alvaro anak pertama dari 2 saudara, selama pandemi covid-19 memberikan banyak pengalam dari pengalaman yang manis maupun yang pahit tapi semua itu saya lewatkan dengan gembira karena guru yang terbaik adalah
+              pengalaman
+            </p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt velit vel, facilis voluptates, officiis dolor illum reprehenderit saepe enim eaque fuga quibusdam dolore illo id!</p>
+            <p>Berbagai kegiatan telah saya lalukan seperti sebagai shoutcaster, ART, jual makanan, dan masih banyak lagi mungkin ga cukup kalau saya sebutkan disini, terimakasih!!!</p>
           </div>
         </div>
       </div>
@@ -99,7 +102,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="Villa" />
               <div class="card-body">
-                <p class="card-text">Seperti tahu bulat yang digoreng dadakan, acara ke villa pun</p>
+                <p class="card-text">Seperti tahu bulat yang digoreng dadakan, acara ini pun seperti itu dadakan di adakan setelah uts matkul agama</p>
               </div>
             </div>
           </div>
@@ -107,7 +110,7 @@
             <div class="card">
               <img src="img/projects/2.jpg" class="card-img-top" alt="Blue Camp" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Perwakilan kelas 1IA07 yang ikut bLuecAmp banyak hal yang terjadi sebelum dan setelah acara ini</p>
               </div>
             </div>
           </div>
@@ -115,7 +118,7 @@
             <div class="card">
               <img src="img/projects/3.jpg" class="card-img-top" alt="Kost Alul" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Karna gaada jadwal uts, gua nyempetin main di kost alul dan ternyata udah banyak orang yang disana (jangan dicari yang gaada)</p>
               </div>
             </div>
           </div>
@@ -123,7 +126,7 @@
             <div class="card">
               <img src="img/projects/4.jpg" class="card-img-top" alt="Opening IC" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Gua kaget ternyata 1IA07 menjadi kelas terbaik bahkan anak kelas pun ter bingung-bingung</p>
               </div>
             </div>
           </div>
@@ -131,7 +134,7 @@
             <div class="card">
               <img src="img/projects/5.jpg" class="card-img-top" alt="Basis Kereta" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Gatau kepikiran apa untuk foto disini, tapi terlihat bagus juga full roker, rombongan kereta</p>
               </div>
             </div>
           </div>
