mengubah About Me

--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
         </div>
         <div class="row justify-content-center fs-5">
           <div class="col-md-4">
-            <p>
-              Perkenalkan saya Alvaro anak pertama dari 2 saudara, selama pandemi covid-19 memberikan banyak pengalam dari pengalaman yang manis maupun yang pahit tapi semua itu saya lewatkan dengan gembira karena guru yang terbaik adalah
-              pengalaman
-            </p>
+            <p>Perkenalkan saya Alvaro anak pertama dari 2 saudara, selama pandemi covid-19 memberikan banyak pengalaman dari pengalaman yang manis maupun yang pahit</p>
           </div>
           <div class="col-md-4">
             <p>Berbagai kegiatan telah saya lalukan seperti sebagai shoutcaster, ART, jual makanan, dan masih banyak lagi mungkin ga cukup kalau saya sebutkan disini, terimakasih!!!</p>
