mengubah deskripsi gambar

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="Villa" />
               <div class="card-body">
-                <p class="card-text">Seperti tahu bulat yang digoreng dadakan, acara ini pun seperti itu dadakan di adakan setelah uts matkul agama</p>
+                <p class="card-text">Seperti tahu bulat yang digoreng dadakan, acara ini pun dadakan di adakan setelah uts matkul agama</p>
               </div>
             </div>
           </div>
